// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should not render in body when closed 1`] = `<div />`;

exports[`The component should render in body when open 1`] = `<div />`;

exports[`The component should render in body when open 2`] = `
"<div>
  <div data-reactroot=\\"\\" class=\\"backdrop visible\\"></div>
</div>
<div>
  <div data-reactroot=\\"\\" class=\\"container\\">
    <div class=\\"overlay\\">
      <section class=\\"content\\">
        <header>
          <!-- react-text: 5 -->My overlay title
          <!-- /react-text --><span class=\\"icon fa fa-times\\" aria-label=\\"times\\" role=\\"button\\" tabindex=\\"0\\"></span></header>
        <article>
          <p>My overlay content</p>
        </article>
        <footer>
          <!-- react-empty: 10 -->
          <button class=\\"primary\\"><span class=\\"text\\">Apply</span></button>
        </footer>
      </section>
    </div>
  </div>
</div>"
`;

exports[`The component should render in body with actions when open 1`] = `<div />`;

exports[`The component should render in body with actions when open 2`] = `
"<div>
  <div data-reactroot=\\"\\" class=\\"backdrop visible\\"></div>
</div>
<div>
  <div data-reactroot=\\"\\" class=\\"container\\">
    <div class=\\"overlay\\">
      <section class=\\"content\\">
        <header>
          <!-- react-text: 5 -->My overlay title
          <!-- /react-text --><span class=\\"icon fa fa-times\\" aria-label=\\"times\\" role=\\"button\\" tabindex=\\"0\\"></span></header>
        <article>
          <p>My overlay content</p>
        </article>
        <footer>
          <div class=\\"actions\\">
            <button class=\\"underlined\\"><span class=\\"text\\">Action 1</span></button>
            <button class=\\"underlined\\"><span class=\\"text\\">Action 2</span></button>
          </div>
          <button class=\\"primary\\"><span class=\\"text\\">Apply</span></button>
        </footer>
      </section>
    </div>
  </div>
</div>"
`;
